--- a/Login.css
+++ b/Login.css
@@ -82,8 +82,21 @@
 }
 
 .redefinir-senha{
-    display: block;
+    display: block; 
     position: absolute;
     width: 100%;
 }
+.redefinir-senha{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    line-height: 1.12cm;
+    text-align: left;
+    right: -45px;
+}
 
+.redefinir-senha[
+    
+]
