--- a/Login.css
+++ b/Login.css
@@ -86,17 +86,12 @@
     position: absolute;
     width: 100%;
 }
-.redefinir-senha{
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    top: 0;
-    line-height: 1.12cm;
-    text-align: left;
-    right: -45px;
-}
 
-.redefinir-senha[
+.redefinir-senha .a{
+    display: flex;
+    justify-content: center;
+    top: 0;
+    -webkit-box-pack: justify; 
+    font-size: 14px;
     
-]
+}
