--- a/Login.css
+++ b/Login.css
@@ -82,16 +82,24 @@
 }
 
 .redefinir-senha{
-    display: block; 
+    display: flex; 
     position: absolute;
     width: 100%;
+    cursor: pointer;
+}
+.redefinir-senha{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    top: -30px;
+    line-height: 1.12cm;
+    text-align: left;
+    right: -45px;
 }
 
-.redefinir-senha .a{
-    display: flex;
-    justify-content: center;
-    top: 0;
-    -webkit-box-pack: justify; 
+.redefinir-senha > a{  
     font-size: 14px;
-    
+    color: rgb(20, 220, 63);
+    z-index: 1;
 }
