--- a/Login.css
+++ b/Login.css
@@ -22,9 +22,10 @@
     display: flex;
     justify-items: center;
     flex-direction: column;
-    place-content: center; 
-    max-height: 100%;  
-    object-position: 50% 50%;
+    align-items: center;
+    padding: 30px;
+    margin-top: auto;
+    text-align: center;
 }
 /*alterando a cor do simbolo inserido*/
 .material-symbols-outlined{
@@ -145,4 +146,3 @@ h1{
     z-index: 0;
     margin: 0;   
 }
-
