--- a/Login.css
+++ b/Login.css
@@ -1,3 +1,13 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+html,
+body{
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
 /*Borda centralizada ao meio*/
 .border{
     display: block;
@@ -18,15 +28,7 @@
     position: relative;
     object-position: 50% 50%; 
 }
-.border{
-    display: flex;
-    justify-items: center;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
-    margin-top: auto;
-    text-align: center;
-}
+
 /*alterando a cor do simbolo inserido*/
 .material-symbols-outlined{
     color: white;
@@ -140,9 +142,17 @@ h1{
     transition: background 0.1s ease-in-out;
 }
 
-.politica-group{
+.check{
     display: block;
     position: absolute;
     z-index: 0;
     margin: 0;   
+}
+.check,
+input[type="checkbox"],
+.check-terms{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
