--- a/Cad.css
+++ b/Cad.css
@@ -36,6 +36,7 @@ body{
 /*alterando a cor do simbolo inserido*/
 .material-symbols-outlined{
     color: white;
+    margin-right: 10px;
 } 
 h1{
     display: flex;
@@ -66,17 +67,19 @@ h1{
 
 .nome,
 .nome-full{
+    display: block;
     width: 100%;
     max-width: 200px;
     margin: 0 auto;
 }
 .nome{
-    display: block;
-}
-.nome-full{
-    display: block;
-}
-.nome,
-.nome-full{
     display: flex;
+    position: relative;
+    margin: 0;
+    top: 0;
+    z-index: 0;
+    line-height: -1.2cm;
+    justify-content: center;
+    text-align: left;
+    right: -18%;
 }
