--- a/Cad.css
+++ b/Cad.css
@@ -72,7 +72,7 @@ h1{
     display: block;
     width: 100%;
     padding: 3px;
-    max-width: 170px;
+    max-width: 163px;
     margin: 0 auto;
 }
 .nome{
@@ -83,7 +83,7 @@ h1{
     z-index: 0;
     justify-content: center;
     text-align: left;
-    right: -18%;
+    right: -106px;
 } 
 .E-mail,
 .material-symbols-outlined{
@@ -117,8 +117,8 @@ h1{
     position: relative;
     top: -50px;
     line-height: 1.12cm; 
-    text-align: left;
-    right: 16%;
+    text-align: right;
+    right: 110px;
 }
 .psw_senha,
 .psw_required{
@@ -161,7 +161,7 @@ h1{
     align-items: center;
     margin-top: -50px;
     text-align: right;
-    left: -98px !important;
+    left: -110px !important;
 } 
 .linguagem select{
     width: 100%;
@@ -184,6 +184,5 @@ h1{
     position: relative;
     justify-content: center;
     top: -53px;
-    right: -120px;
+    right: -111px;
 }
-
