--- a/Cad.css
+++ b/Cad.css
@@ -211,3 +211,18 @@ h1{
 /*-------------------------------------------------------------------------------*/
                                 /*Rede Social*/
 
+.midia{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: -30px;
+    padding: auto;
+    top: auto;
+    z-index: 1;
+    cursor: pointer;
+}
+.midia{
+    display: -moz-inline-box;
+    grid-column-gap: 6px;
+    grid-row-gap: 4em;
+}
